# marecchia

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr.yml  pr_rust.yml  pr_typescript.yml  release.yml
crates/: .dockerignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
crates/marecchia-backend/: Cargo.toml
crates/marecchia-backend/src/: main.rs
crates/marecchia-core/: Cargo.toml  README.md
crates/marecchia-core/src/: behaviour.rs  client.rs  event_loop.rs  lib.rs
crates/marecchia-core/src/p2p/: behaviour.rs  client.rs  event_loop.rs
crates/marecchia-p2p/: Cargo.toml
crates/marecchia-p2p/src/: lib.rs
crates/marecchia-p2p/src/p2p/: client.rs
crates/marecchia-tracker/: Cargo.toml  Dockerfile  README.md
crates/marecchia-tracker/src/: main.rs  metrics.rs
examples/nextjs/: README.md  next.config.mjs  package-lock.json  package.json
examples/nextjs/src/app/: page.tsx
examples/nextjs/src/components/: video.tsx
marecchia/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
marecchia/src/: fragments_map.ts  index.ts  signaling.ts
marecchia/src/p2p/: P2PLoader.ts  peer.ts
src/: lib.rs  loader.rs  tracker.rs
src/http/: downloader.rs  mod.rs
src/p2p/: behaviour.rs  client.rs  event_loop.rs  mod.rs  segment_protocol.rs
src/p2p/protocol/: mod.rs  segment_protocol.rs
src/p2p_media/: behaviour.rs  client.rs  event_loop.rs  mod.rs  segment_protocol.rs  test.rs
src/storage/: local_storage.rs  memory_storage.rs  mod.rs
