[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "^0.1"
libp2p = { version = "^0.53", features = ["full"] }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p.git" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
wasm-logger = "^0.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
js-sys = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
rmp-serde = "^1.1"
m3u8-rs = "^5.0"
lru = "^0.12"

[dependencies.web-sys]
version = "^0.3"
features = [
    "Window",
    "console",
    "MessageEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]
