[workspace]
resolver = "2"
members = [ "marecchia-tracker", "marecchia-core"]

[workspace.package]
license = "AGPL-3.0-or-later"
authors = ["ferrohd"]
edition = "2021"
repository = "https://github.com/ferrohd/marecchia/"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release.package.marecchia-core]
strip = true
