[workspace]
resolver = "2"
members = [ "marecchia-tracker", "marecchia-core"]

[workspace.package]
license = "AGPL-3.0-or-later"
authors = ["ferrohd"]
edition = "2024"
repository = "https://github.com/ferrohd/marecchia/"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.dependencies]
libp2p = { version = "0.56.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
