[package]
name = "marecchia-core"
description = "WASM module for the Marecchia project"
version = "0.0.6"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.85"
console_error_panic_hook = "0.1.7"
libp2p = { version = "0.55.0", features = ["full"] }
libp2p-webrtc-websys = "0.4.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
js-sys = "0.3.76"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-web = "0.1.3"
