[package]
name = "marecchia-p2p"
description = "A WebRTC-based P2P live streaming library"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "^0.1.79"
libp2p = { version = "^0.53.2", features = [
    "wasm-bindgen",
    "gossipsub",
    "ping",
    "identify",
    "autonat",
    "noise",
    "memory-connection-limits",
    "secp256k1",
    "rendezvous",
    "rsa",
    "metrics",
    "ecdsa",
    "macros",
    "ed25519"
] }
libp2p-webrtc-websys = "0.3.0-alpha"
wasm-bindgen = "^0.2.92"
wasm-bindgen-futures = "^0.4.42"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
js-sys = "^0.3.69"
m3u8-rs = "^6.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2.1"

[dependencies.web-sys]
version = "^0.3.69"
features = [
    "Window",
    "console",
    "MessageEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]
