[package]
name = "marecchia-tracker"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["server", "http1"] }
hyper-util = {version = "0.1.3", features = ["tokio", "server", "http1"]}
libp2p = { version = "0.54.0", features = ["full"] }
opentelemetry = { version = "0.26.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.26.0", features = ["tokio", "metrics"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "metrics"] }
prometheus-client = "0.22.2"
sha3 = "0.10.8"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true
